add uevent for /dev/mmcblk0*
N/A

Signed-off-by: liminghao <liminghao@xiaomi.com>

--- a/soc/bcm2837/ueventd.bcm.rc
+++ b/soc/bcm2837/ueventd.bcm.rc
@@ -1,3 +1,4 @@
 # Device needed by shared transport layer
-/dev/mmcblk0*    0666   root root
+/dev/block/mmcblk0*    0660   root system
+
 /dev/ttyAMA0     0666   root root
