common: add initnetwork.sh to enable adb connect raspberrypi.
N/A

Signed-off-by: liminghao <liminghao@xiaomi.com>

--- a/soc/common/init.bcm.rc
+++ b/soc/common/init.bcm.rc
@@ -22,3 +22,11 @@ on init
 
 on fs
     mount_all /fstab.${ro.hardware}
+
+on boot
+    start initnetwork
+
+service initnetwork /system/bin/initnetwork.sh
+    user root
+    group root
+    oneshot
