init.bcm.rc: set hostname as "Yudatun.local".
N/A

Signed-off-by: liminghao <yudatun@gmail.com>

--- a/soc/bcm2837/init.bcm.rc
+++ b/soc/bcm2837/init.bcm.rc
@@ -24,6 +24,8 @@ on fs
     mount_all /fstab.${ro.hardware}
 
 on boot
+    hostname "Yudatun.local"
+
     start initnetwork
 
 service initnetwork /system/bin/initnetwork.sh
